Update Supabase configuration in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Supabase Configuration
-VITE_SUPABASE_URL=your-supabase-project-url
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+VITE_SUPABASE_URL=https://xaknhwxfkcxtqjkwkccn.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_secret_YjLXOe7E5hHZ2Mm30oYaXg_z-kuzXgR
 
 # App Configuration
 VITE_APP_NAME=Bandits Training Tracker
