--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 # Supabase Configuration
-VITE_SUPABASE_URL=https://xaknhwxfkcxtqjkwkccn.supabase.co
-VITE_SUPABASE_ANON_KEY=sb_secret_YjLXOe7E5hHZ2Mm30oYaXg_z-kuzXgR
-
+VITE_SUPABASE_URL=
+VITE_SUPABASE_ANON_KEY=
 # App Configuration
 VITE_APP_NAME=Bandits Training Tracker
 VITE_APP_VERSION=0.1.0
